k8/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: playground
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefiktest
  namespace: playground
spec:
  selector:
    matchLabels:
      app: traefiktest
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: traefiktest
    spec:
      containers:
        - name: traefiktest-pod
          image: vsimone67/traefiktest:latest
          imagePullPolicy: "Always"
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: traefiktest-svc
  namespace: playground
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: traefiktest
  type: LoadBalancer
