k8/traefik-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefiktest-deployment
  namespace: playground
  labels:
    app: traefiktest
spec:
  selector:
    matchLabels:
      app: traefiktest
  replicas: 2
  template:
    metadata:
      labels:
        app: traefiktest
    spec:
      containers:
        - name: traefiktest-pod
          image: vsimone67/traefiktest:latest
          imagePullPolicy: "Always"
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: traefiktest-svc
  namespace: playground
spec:
  ports:
    - protocol: TCP
      port: 80
      name: web
  selector:
    app: traefiktest
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: traefiktest-route
  namespace: playground
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fitnesstracker.titan`) && PathPrefix(`/weatherforecast`)
      kind: Rule
      services:
        - name: traefiktest-svc
          port: 80
